fix: buttons in RequestPage.tsx are now aligned for all cards

--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -157,7 +157,7 @@
     --primary: #304269;
     --primary-foreground: #FFFFFF;
     --secondary: #6C8EB1;
-    /*--secondary: #6b86c2;*/
+    --inside-boxes: #dbdbdbd;
     --secondary-foreground: #304269;
     --muted: #6C8EB1;
     --muted-foreground: oklch(0.556 0 0);
